# libwin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_libwin.c
include/: __windows_shim_arch_helper.h  __windows_shim_json_helper.h  __windows_shim_local_wsa_lasterror.h  __windows_shim_msvcrt.h  debugapi.h  errhandlingapi.h  fileapi.h  libloaderapi.h  libwin_arch_helper.h  libwin_json_helper.h  libwin_local_lasterror.h  libwin_msvcrt.h  libwin_winuser_defs.h  minwinbase.h  minwindef.h  ntdef.h  process.h  processthreadsapi.h  profileapi.h  shellapi.h  synchapi.h  sysinfoapi.h  timeapi.h  winbase.h  windef.h  windows.h  winerror.h  wingdi.h  winnt.h  winreg.h  winsock2.h  winsvc.h  winuser.h  ws2def.h
src/: dummy.c  variables.c
tests/: Makefile  io.h  libwin_tests.cpp
